# phone-number-matcher

./: dig_phone_extractor.py  example.py  phone_number_extractor.py  requirements.txt  setup.cfg
pnmatcher/: __init__.py
pnmatcher/core/cleaner/: __init__.py
pnmatcher/core/extractor/: __init__.py
pnmatcher/core/normalizer/: __init__.py
pnmatcher/core/preprocessor/: __init__.py
pnmatcher/core/tokenizer/: __init__.py
pnmatcher/core/validator/: __init__.py
pnmatcher/res/area_code/: __init__.py
