[metadata]
name = pnmatcher
version = 0.1.3
author = Lingzhe Teng
author_email = zwein27@gmail.com
url = https://github.com/ZwEin27/phone-number-matcher
download_url = https://github.com/ZwEin27/phone-number-matcher/tarball/0.1.2

[options]
packages = find: 
install_requires =
    phonenumbers==8.12.49
